# TacviewLogAnalyzer

./: .gitattributes  .gitignore  README.md  build.ps1  check_stats.py  debug_duplicate.py  debug_interception.py  debug_viewmodel.py  pyproject.toml  standalone_main.py  test_interception.py
.github/workflows/: release.yml
examples/: README.md  custom_template_example.html
scripts/: explore_xml.py
src/tacview_log_analyzer/: __init__.py  cli.py  linking.py  models.py  parser.py  stats.py  viewmodel.py  web_entry.py  webapp.py
src/tacview_log_analyzer/webui/: index.html
tests/: test_cli.py  test_linking.py  test_parser.py  test_stats.py
