[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tacview-log-analyzer"
version = "0.1.0"
description = "Parse Tacview XML logs and generate statistics (skeleton)."
readme = "README.md"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["tacview", "xml", "analysis", "statistics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Environment :: Console",
]

[project.urls]
Homepage = "https://example.com/"
Repository = "https://example.com/repo.git"

[project.scripts]
# CLI entry point
"tacview-analyze" = "tacview_log_analyzer.cli:main"

[project.optional-dependencies]
# Install with: pip install .[dev]
dev = [
  "black>=24.4.0",
  "ruff>=0.5.0",
  "pytest>=8.2.0",
  "pyinstaller>=6.10.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.4",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tacview_log_analyzer" = [
  "webui/*.html",
  "webui/**/*.html",
  "webui/**",
]
